--- a/package.json
+++ b/package.json
@@ -1,23 +1,20 @@
 {
-  "name": "nodejs-udemy-learn",
+  "name": "nodejs-complete-guide",
   "version": "1.0.0",
-  "description": "",
-  "main": "first-app-node.js",
+  "description": "Complete Node.js Guide",
+  "main": "app.js",
   "scripts": {
-    "start": "nodemon first-app-node.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon app.js",
+    "start-server": "node app.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/chaim1/NodeJs-Udemy-Learn.git"
-  },
-  "author": "",
+  "author": "Maximilian Schwarzmüller",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/chaim1/NodeJs-Udemy-Learn/issues"
-  },
-  "homepage": "https://github.com/chaim1/NodeJs-Udemy-Learn#readme",
   "devDependencies": {
-    "nodemon": "^1.18.10"
+    "nodemon": "^1.18.3"
+  },
+  "dependencies": {
+    "body-parser": "^1.18.3",
+    "express": "^4.16.3"
   }
 }
